fix: docker image names

--- a/opencloud/docker/manifest.production-latest.tmpl
+++ b/opencloud/docker/manifest.production-latest.tmpl
@@ -1,10 +1,10 @@
-image: opencloud-eu/opencloud:latest
+image: opencloudeu/opencloud:latest
 manifests:
-  - image: opencloud-eu/opencloud:{{#if build.tag}}{{trimPrefix "v" build.tag}}-{{/if}}linux-amd64
+  - image: opencloudeu/opencloud:{{#if build.tag}}{{trimPrefix "v" build.tag}}-{{/if}}linux-amd64
     platform:
       architecture: amd64
       os: linux
-  - image: opencloud-eu/opencloud:{{#if build.tag}}{{trimPrefix "v" build.tag}}-{{/if}}linux-arm64
+  - image: opencloudeu/opencloud:{{#if build.tag}}{{trimPrefix "v" build.tag}}-{{/if}}linux-arm64
     platform:
       architecture: arm64
       variant: v8
