--- a/services/idm/ldif/demousers.ldif.tmpl
+++ b/services/idm/ldif/demousers.ldif.tmpl
@@ -15,6 +15,7 @@ mail: alan@example.org
 openCloudUserEnabled: TRUE
 openCloudUUID: b1f74ec4-dd7e-11ef-a543-03775734d0f7
 openCloudExternalIdentity:  $ {{.}} $ b1f74ec4-dd7e-11ef-a543-03775734d0f7
+openCloudTenantId: cd22ea13-f6b4-4f5f-a2c2-69b5a0f07a8b
 userPassword:: e0FSR09OMn0kYXJnb24yaWQkdj0xOSRtPTY1NTM2LHQ9MSxwPTE2JGg1NUxqckhWVjdEdXVzTkxjbXRoa0EkMzZ3aGZSMjdyTDFOYXQxa0xTajdrVGFubTBnb3VKRGZ0ck9DTStuRHo5cw==
 
 dn: uid=lynn,ou=users,o=libregraph-idm
@@ -34,6 +35,7 @@ mail: lynn@example.org
 openCloudUserEnabled: TRUE
 openCloudUUID: 60708dda-e897-11ef-919f-bbb7437d6ec2
 openCloudExternalIdentity:  $ {{.}} $ 60708dda-e897-11ef-919f-bbb7437d6ec2
+openCloudTenantId: cd22ea13-f6b4-4f5f-a2c2-69b5a0f07a8b
 userPassword:: e0FSR09OMn0kYXJnb24yaWQkdj0xOSRtPTY1NTM2LHQ9MSxwPTE2JGg1NUxqckhWVjdEdXVzTkxjbXRoa0EkMzZ3aGZSMjdyTDFOYXQxa0xTajdrVGFubTBnb3VKRGZ0ck9DTStuRHo5cw==
 
 dn: uid=mary,ou=users,o=libregraph-idm
@@ -53,6 +55,7 @@ mail: mary@example.org
 openCloudUserEnabled: TRUE
 openCloudUUID: 056fc874-dd7f-11ef-ba84-af6fca4b7289
 openCloudExternalIdentity:  $ {{.}} $ 056fc874-dd7f-11ef-ba84-af6fca4b7289
+openCloudTenantId: cd22ea13-f6b4-4f5f-a2c2-69b5a0f07a8b
 userPassword:: e0FSR09OMn0kYXJnb24yaWQkdj0xOSRtPTY1NTM2LHQ9MSxwPTE2JGg1NUxqckhWVjdEdXVzTkxjbXRoa0EkMzZ3aGZSMjdyTDFOYXQxa0xTajdrVGFubTBnb3VKRGZ0ck9DTStuRHo5cw==
 
 dn: uid=margaret,ou=users,o=libregraph-idm
@@ -72,6 +75,7 @@ mail: margaret@example.org
 openCloudUserEnabled: TRUE
 openCloudUUID: 801abee4-dd7f-11ef-a324-83f55a754b62
 openCloudExternalIdentity:  $ {{.}} $ 801abee4-dd7f-11ef-a324-83f55a754b62
+openCloudTenantId: cd22ea13-f6b4-4f5f-a2c2-69b5a0f07a8b
 userPassword:: e0FSR09OMn0kYXJnb24yaWQkdj0xOSRtPTY1NTM2LHQ9MSxwPTE2JGg1NUxqckhWVjdEdXVzTkxjbXRoa0EkMzZ3aGZSMjdyTDFOYXQxa0xTajdrVGFubTBnb3VKRGZ0ck9DTStuRHo5cw==
 
 dn: uid=dennis,ou=users,o=libregraph-idm
@@ -91,6 +95,7 @@ mail: dennis@example.org
 openCloudUserEnabled: TRUE
 openCloudUUID: cd88bf9a-dd7f-11ef-a609-7f78deb2345f
 openCloudExternalIdentity:  $ {{.}} $ cd88bf9a-dd7f-11ef-a609-7f78deb2345f
+openCloudTenantId: cd22ea13-f6b4-4f5f-a2c2-69b5a0f07a8b
 userPassword:: e0FSR09OMn0kYXJnb24yaWQkdj0xOSRtPTY1NTM2LHQ9MSxwPTE2JGg1NUxqckhWVjdEdXVzTkxjbXRoa0EkMzZ3aGZSMjdyTDFOYXQxa0xTajdrVGFubTBnb3VKRGZ0ck9DTStuRHo5cw==
 
 dn: cn=users,ou=groups,o=libregraph-idm
